# cbugger

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Readme.md  debugger.cpp  dockerfile  linenoise.c  vcpkg.json
examples/: hello_world.cpp
include/: debugger.h  debugger.hpp
include/libcbg/: error.hpp  libcbg.hpp  pipe.hpp  process.hpp
src/: CMakeLists.txt  debugger.cpp  libcbg.cpp  main.cpp  pipe.cpp  process.cpp
test/: CMakeLists.txt  tests.cpp
test/targets/: run_endlessly.cpp
tools/: CMakeLists.txt  cbg.cpp
